# google_analytics_data_json

./: .gitignore  LICENSE  README.md  jannis.json  pyproject.toml  requirements.txt  run.py  setup.cfg
src/: main.py
src/google_analytics_data_json/: create_ga4_request.py  google_analytics_data_json.py  transform_ga4_data.py
src/metrics/: metric_object.py  metrics_list.py
src/transformation/: transform_data.py
src/utils/google/: create_request.py
test/: __init__.py  test_create_ga4_request.py  test_google_analytics_data_json.py  test_main.py  test_transform_ga4_data.py
test/test_transformation/: test_transform_data.py
test/test_utils/test_google/: test_create_request.py
tests/: test_create_ga4_request.py  test_google_analytics_data_json.py  test_transform_ga4_data.py
